--- a/src/app/shared/modal/modal.component.html
+++ b/src/app/shared/modal/modal.component.html
@@ -3,7 +3,7 @@
 
 
 <!-- Auth Modal -->
-<div class="fixed z-50 inset-0 overflow-y-auto" id="modal">
+<div class="fixed z-50 inset-0 overflow-y-auto" id="modal" [ngClass]="{ hidden: !modal.isModalVisible() }">
   <div class="flex items-end justify-center min-h-screen pt-4 px-4 pb-20 text-center 
     sm:block sm:p-0">
     <!-- Modal BG Overlay -->
@@ -24,7 +24,7 @@
           <ng-content select="[heading]"></ng-content>
           
           <!-- Modal Close Button -->
-          <div class="modal-close cursor-pointer z-50">
+          <div class="modal-close cursor-pointer z-50" (click)="closeModal($event)">
             &#x2715;
           </div>
         </div>
