--- a/src/app/user/register/register.component.html
+++ b/src/app/user/register/register.component.html
@@ -64,7 +64,8 @@
   </div>
   <!-- Submit Button -->
   <button type="submit"
-    class="disabled:opacity-50 block w-full bg-indigo-400 text-white py-1.5 px-3 rounded transition hover:bg-indigo-500 disabled:bg-indigo-400" [disabled]="registerForm.invalid">
+    class="disabled:opacity-50 block w-full bg-indigo-400 text-white py-1.5 px-3 rounded transition hover:bg-indigo-500 disabled:bg-indigo-400" 
+    [disabled]="registerForm.invalid || inSubmission">
     Submit
   </button>
 </form>
