--- a/src/app/user/register/register.component.html
+++ b/src/app/user/register/register.component.html
@@ -42,6 +42,7 @@
       [control]="registerForm.controls.password"
       type="password"
       placeholder="Enter Password" 
+      autocomplete="new-password"
     ></app-input>
   </div>
   <!-- Confirm Password -->
@@ -51,6 +52,7 @@
       [control]="registerForm.controls.confirm_password"
       type="password"
       placeholder="Confirm The Password" 
+      autocomplete="new-password"
     ></app-input>
   </div>
   <!-- Phone Number -->
