--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -252,4 +252,4 @@
   </div>
 </section>
 
-<app-auth-modal></app-auth-modal>
+<app-auth-modal *ngIf="!(auth.isAuthenticated$ | async)"></app-auth-modal>
