--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -6,7 +6,7 @@
 <header id="header" class="bg-secondary">
   <nav class="container mx-auto flex justify-start items-center py-8 px-4">
     <!-- App Name -->
-    <a class="text-3xl text-indigo-400 font-bold uppercase mr-4" href="index.html">Clipz</a>
+    <a class="text-3xl text-indigo-400 font-bold uppercase mr-4" routerLink="/">Clipz</a>
 
     <div class="flex flex-grow items-center">
       <!-- Primary Navigation -->
@@ -29,9 +29,24 @@
           <li>
             <a class="px-2" href="#">Upload</a>
           </li>
+          <li>
+            <a 
+              href="#" 
+              class="px-2"
+              (click)="logout($event)"
+            >
+              Logout
+            </a>
+          </li>
         </ng-template>
-        <li>
-          <a class="px-2" href="about.html">About</a>
+        <li routerLinkActive="text-indigo-400">
+          <a 
+            routerLinkActive="text-indigo-400"
+            class="px-2" 
+            routerLink="/about"
+          >
+            About
+          </a>
         </li>
       </ul>
       <!-- Language Switcher -->
