--- a/src/app/shared/input/input.component.html
+++ b/src/app/shared/input/input.component.html
@@ -35,6 +35,12 @@
   <p *ngIf="control.errors?.['pattern']" class="text-red-400">
     Password must contain at least one letter, one number, and be at least 8 characters long.
   </p>
+  <p *ngIf="control.errors?.['noMatch']" class="text-red-400">
+    Password do not match.
+  </p>
+  <p *ngIf="control.errors?.['emailTaken']" class="text-red-400">
+    Email yaken. Please try another email.
+  </p>
   
 </ng-container>
 
