--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -24,16 +24,33 @@
         </li>
         <ng-template #authLinks>
           <li>
-            <a class="px-2" href="#">Manage</a>
+            <a 
+              routerLink="/manage"
+              routerLinkActive="text-indigo-400"
+              [routerLinkActiveOptions]="{ exact: true }"
+              [queryParams]="{ sort: '1' }"
+              class="px-2" 
+              href="#"
+            >
+              Manage
+            </a>
           </li>
           <li>
-            <a class="px-2" href="#">Upload</a>
+            <a 
+              routerLink="/upload"
+              routerLinkActive="text-indigo-400"
+              [routerLinkActiveOptions]="{ exact: true }"
+              class="px-2" 
+              href="#"
+            >
+              Upload
+            </a>
           </li>
           <li>
             <a 
               href="#" 
               class="px-2"
-              (click)="logout($event)"
+              (click)="auth.logout($event)"
             >
               Logout
             </a>
