Some prefinal changes.

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,6 +1,6 @@
-
-
-<!-- Main Content -->
-<p class="container mx-auto mt-4">
-  This is a basic about page to demonstrate basic routing capabilities.
-</p>
+<div class="about-block">
+  <div class="about-block-container">
+    <h1>Clip it and ship it!</h1>
+    <h2>The #1 app to watch, clip, and share your awesome gaming moments with your friends and the world! With our world-class tools, we make it incredibly easy to share your videos. Get started today!</h2>
+  </div>
+</div>
