--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,10 +2,10 @@
 
 
 <!-- Intro Section -->
-<section class="relative overflow-hidden mb-2"> 
+<section class="relative overflow-hidden mb-2">
   <!-- The video -->
   <video autoplay muted loop class="w-full h-full object-cover absolute z-0">
-    <source src="assets/video/hero.webm" type="video/webm">
+    <source src="assets/video/hero-no-audio.webm" type="video/webm">
   </video>
 
   <div class="bg-gradient absolute w-full h-full z-40 opacity-60"></div>
@@ -35,5 +35,5 @@
   <h1 class="uppercase text-center text-4xl grid mt-20 mb-12 items-center gap-8 tracking-widest latest">Latest</h1>
 
   <app-clips-list></app-clips-list>
-  
+
 </section>
