--- a/src/app/video/upload/upload.component.html
+++ b/src/app/video/upload/upload.component.html
@@ -3,12 +3,12 @@
 
 
 <!-- Main Content -->
-<section class="container mx-auto my-8 bg-secondary p-6">
+<section style="border-radius: 12px;" class="container mx-auto my-8 bg-secondary p-6">
   <div class="rounded relative flex flex-col">
     <div class="font-bold mb-6">Upload Video</div>
-    
+
     <ng-container>
-      <span 
+      <span
         *ngIf="!ffmpegService.isReady; else uploadEditorCtr"
         class="material-icons text-center text-6xl p-8 animate-spin"
       >
@@ -19,7 +19,7 @@
     <ng-template #uploadEditorCtr>
       <!-- Upload Dropbox -->
       <ng-container *ngIf="!nextStep; else uploadFormCtr">
-        <div 
+        <div
           app-event-blocker
           (dragend)="isDragover = false"
           (dragover)="isDragover = true"
@@ -34,7 +34,7 @@
             border-gray-400 transition duration-500 hover:text-white
             hover:bg-indigo-400 hover:border-indigo-400 hover:border-solid text-xl">
           <h5>Drop your file here (mp4 only!)</h5>
-          <span 
+          <span
             *ngIf="ffmpegService.isRunning"
             class="material-icons text-center text-6xl p-8 animate-spin"
           >
@@ -60,7 +60,7 @@
               *ngFor="let screenshot of screenshots"
               class="border-8 cursor-pointer"
               [ngClass]="{
-                'border-green-400' : screenshot === selectedScreenshot, 
+                'border-green-400' : screenshot === selectedScreenshot,
                 'border-transparent' : screenshot !== selectedScreenshot
               }"
               (click)="selectedScreenshot = screenshot"
@@ -76,13 +76,13 @@
           </div>
 
           <div class="mt-4 text-right">
-            <button 
+            <button
               [ngClass]="{
                 'opacity-50': inSubmission,
                 'hover:bg-indigo-700': !inSubmission
               }"
-              [disabled]="inSubmission" 
-              type="submit" 
+              [disabled]="inSubmission"
+              type="submit"
               class="inline-flex justify-center py-2 px-4 border border-transparent shadow-sm rounded-md text-white bg-indigo-600 focus:outline-none"
             >
               Publish
@@ -92,6 +92,6 @@
 
       </ng-template>
     </ng-template>
-    
+
   </div>
 </section>
